# first_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: test.ipynb
backend/graphs/: agent_graph.py
backend/llm_initiation/: LLM_initiate.py
backend/nodes/: classify_node.py  delete_node.py  nodes.py  notify_node.py
backend/rest/: app.py  debug_cli.py  email_cache.py  google_services.py  notifier.py
backend/state/: state.py
data/: email_cache.json
frontend/: app.py
src/: LLM_initiate.py  agent_graph.py  app.py  debug_cli.py
